2007-04-18  Werner Koch  <wk@g10code.com>

	* ecc.c (generate_curve): Implement alias mechanism.

	* pubkey.c (sexp_elements_extract_ecc): New.
	(sexp_to_key): Add special case for ecc.
	(sexp_to_key, sexp_to_sig, sexp_to_enc, gcry_pk_genkey): Replace
	name_terminated stuff by a call to _gcry_sexp_nth_string.
	(gcry_pk_get_keygrip): Ditto.

2007-04-16  Werner Koch  <wk@g10code.com>

	* ecc.c (_gcry_ecc_generate): Renamed DUMMY to CURVE and use it.

2007-04-13  Marcus Brinkmann  <marcus@g10code.de>

	* ac.c (ac_data_construct): Cast const away to suppress compiler
	warning.

	* ecc.c (ecc_generate): Avoid compiler warning for unused argument
	DUMMY.
	(ecc_verify): Avoid compiler warning for unused arguments CMP and
	OPAQUEV.

2007-04-06  Werner Koch  <wk@g10code.com>

	* sha1.c (oid_spec_sha1): Add another oid from X9.62.

2007-03-28  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_genkey): Do not issue misc-key-info if it is
	empty.
	(gcry_pk_genkey): New parameter "curve".

	* ecc.c: Entirely rewritten with only a few traces of the old
	code left.
	(_gcry_ecc_generate): New.
	(generate_key) New arg NAME.
	(generate_curve): Ditto.  Return actual number of NBITS.

2007-03-26  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_genkey): Increase size of SKEY array and add a
	runtime bounds check.

2007-03-23  Werner Koch  <wk@g10code.com>

	* ecc.c (ecc_ctx_init, ecc_ctx_free, ecc_mod, ecc_mulm): New.
	(duplicate_point, sum_points, escalar_mult): Don't use a
	copy of base->p.  Replaced all mpi_mulm by ecc_mulm so that we can
	experiment with different algorithms.
	(generate_key, check_secret_key, sign, verify): Initialize a
	computation context for use by ecc_mulm.

2007-03-22  Werner Koch  <wk@g10code.com>

	* pubkey.c (pubkey_table): Initialize ECC.
	* Makefile.am (EXTRA_libcipher_la_SOURCES): Add ecc.c.
	* ecc.c: New. Heavily reformatted and changed for use in libgcrypt.
	(point_init): New.
	(escalar_mult): Make arg R the first arg to be similar to the mpi