@@ -1,3 +1,7 @@
+2007-04-20  Werner Koch  <wk@g10code.com>
+
+	* ecc.c (domain_parms): Add standard brainpool curves.
+
 2007-04-18  Werner Koch  <wk@g10code.com>
 
 	* ecc.c (generate_curve): Implement alias mechanism.
